<resources>
    <string name="app_name">AWZAN</string>
    <string name="Describe_login_image">image for login activity</string>
    <string name="username">username :</string>
    <string name="password">password :</string>
    <string name="need_a_new_account">Need a new Account</string>
    <string name="confirn_password">Confirn Password</string>
    <string name="create_account">Create Account</string>
    <string name="action_search">Search</string>
    <string name="account_setting">Account Setting</string>
    <string name="logout">Log Out</string>
    <string name="setup_name_hint">your name..</string>
    <string name="save_account_setting">save Account setting</string>
</resources>
