<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registeration"
    android:background="@color/colorPrimaryDark">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="316dp"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/Describe_login_image"
        app:srcCompat="@drawable/register_img" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/username_register_txtinput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_below="@id/imageView"
        android:textColorHint="@color/white"
        app:counterOverflowTextAppearance="@style/CharacterOverflow"
        app:errorEnabled="false"
        app:errorTextAppearance="@style/ErrorStyle">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/username_register_appcom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_register_textinput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username_register_txtinput"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:textColorHint="@color/white"
        app:counterOverflowTextAppearance="@style/CharacterOverflow"
        app:errorEnabled="false"
        app:errorTextAppearance="@style/ErrorStyle"
        app:hintAnimationEnabled="true"
        app:passwordToggleEnabled="true">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/password_register_appcomp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/cpassword_register_txtinput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_register_textinput"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:textColorHint="@color/white"
        app:counterOverflowTextAppearance="@style/CharacterOverflow"
        app:errorEnabled="false"
        app:errorTextAppearance="@style/ErrorStyle"
        app:hintAnimationEnabled="true"
        app:passwordToggleEnabled="true">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/cpassword_register_appcomp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirn_password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_register_appcomp"
        style="@style/RaisingButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cpassword_register_txtinput"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginTop="45dp"
        android:text="@string/create_account"
        android:textSize="14sp"
        android:textStyle="bold" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_r_login_appcomp"
        style="@style/RaisingButton2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="35dp"
        android:layout_marginStart="35dp"
        android:layout_below="@+id/btn_register_appcomp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="Already have Account"
        android:textSize="14sp"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/progressBar3"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:indeterminate="true"
        android:visibility="invisible"/>

</RelativeLayout>