<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="316dp"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="49dp"
        android:contentDescription="@string/Describe_login_image"
        app:srcCompat="@drawable/login_logo" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/username_TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="177dp"
        android:textColorHint="@color/white"
        app:counterOverflowTextAppearance="@style/CharacterOverflow"
        app:errorEnabled="false"
        app:errorTextAppearance="@style/ErrorStyle">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/username_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username_TextInputLayout"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="35dp"
        android:textColorHint="@color/white"
        app:counterOverflowTextAppearance="@style/CharacterOverflow"
        app:errorEnabled="false"
        app:errorTextAppearance="@style/ErrorStyle"
        app:hintAnimationEnabled="true"
        app:passwordToggleEnabled="true">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/appcompat_loginbtn"
        style="@style/RaisingButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_below="@+id/password_TextInputLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="Log in Account"
        android:textSize="14sp"
        android:textStyle="bold" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/appcompat_loginbtn1"
        style="@style/RaisingButton2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_below="@+id/appcompat_loginbtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/need_a_new_account"
        android:textSize="14sp"
        android:textStyle="bold" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="20dp"
        app:backgroundTint="@color/TextColore"
        android:src="@drawable/email"
        app:fabSize="normal"
        app:elevation="8dp"
        />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:indeterminate="true"
        android:visibility="invisible" />
</RelativeLayout>